<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="274dp"
        android:layout_height="173dp"
        android:background="@drawable/bg_item_favorite"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp"
        android:screenReaderFocusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nameFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/nome_pokemon_favorito"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_nameAbrevietedFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_candyPokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:padding="4dp"
            android:text="@string/candy_pokemon_favorito"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_priceFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nameFavorite" />

        <ImageView
            android:id="@+id/imagePokemon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Imagem do pokemom"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:srcCompat="@drawable/pokemon_favorito"
        android:contentDescription="@string/simbolo_favorito"
        />

</androidx.constraintlayout.widget.ConstraintLayout>