<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenReaderFocusable="true"
    android:id="@+id/InfoFragment"
    tools:context=".ui.InfoPokemon.InfoFragment"
    android:layout_marginTop="85dp">

    <TextView
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:padding="16dp"
        android:text="@string/go_back"
        android:hint="Voltar"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="17sp"
        android:drawableTint="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="138dp"
        android:contentDescription="@string/name_pokemon"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_pokemonNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_pokemonNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elegantTextHeight="true"
        android:hint="@string/name_pokemon"
        android:padding="16dp"
        android:text="Arbok"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_addFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#191919"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addFavorite"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Informações"
            android:hint="Informações"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:text="Peso: "
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:hint="@string/peso_pokemon"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                android:text="Altura: "
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:hint="@string/altura_pokemom"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ovo"
                android:text="Ovo: "
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_ovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="52dp"
        android:contentDescription="Marcado como favorito"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@drawable/pokemon_favorito"
        tools:layout_editor_absoluteY="27dp"
        tools:visibility="visible"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_addFavorite"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_button"
        android:hint="@string/add"
        android:padding="5dp"
        android:text="ADICIONAR"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_pokemonNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>