<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:text="Pokedex"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tv_mainDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="4 jan 2020"
        android:textSize="15sp" />

</LinearLayout>