<resources>
    <string name="app_name">Pokedex App</string>
    <string name="title_home">Pokemons</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Favoritos</string>
    <string name="BuscaPokemon">Digite o nome do pokemon</string>
    <string name="name_pokemon">Nome do pokemon</string>
    <string name="date">4 de março de 2022</string>
    <string name="go_back">Voltar</string>
    <string name="add">Adicionar como favorito</string>
    <string name="altura_pokemom">Altura do pokemom</string>
    <string name="peso_pokemon">Peso do pokemon</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="ovo">Ovo</string>
    <string name="nome_pokemon_favorito">Nome do Pokemon Favorito</string>
    <string name="candy_pokemon_favorito">Candy do Pokemon Favorito</string>
    <string name="simbolo_favorito">Pokemon classificado como favorito</string>
    <string name="try_again">Algo de errado aconteceu, por favor tente novamente</string>
    <string name="mensagem_de_erro">Mensagem de erro</string>

</resources>